Fixing margin/padding icon alignment

--- a/admin/assets/less/layoutmanager-sidebar.less
+++ b/admin/assets/less/layoutmanager-sidebar.less
@@ -663,6 +663,11 @@ body.configurator-wrapper {
 
 				&.btn.ui-advanced {
 					margin: 0 0 0 3px;
+		
+					i{
+						margin: 0;
+					}
+
 				}
 
 			}
